Add information how to create a valid configuration file
Also output appropriate information when configuration file is missing.

--- a/app.conf.template
+++ b/app.conf.template
@@ -1,3 +1,6 @@
+# Use a copy of app.conf.template to create a valid application configuration named 'app.conf'
+# and fill in the missing parameters.
+
 bot {
     # Bot name is not used at the moment
     name = ""
